--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,21 @@
 body {
-  margin: 0;
+  margin:0;
+  padding:0;
+  min-width: fit-content;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
 }
+html, body {
+  height: 100%;
+}
+#root{
+  height: 100%;
+}
+
 *{
   margin: 0;
   padding: 0;
