--- a/src/components/intro/intro.module.scss
+++ b/src/components/intro/intro.module.scss
@@ -5,7 +5,7 @@
     z-index: 1;
     height: 510px;
     width: 100%;
-    max-width: 1400px;
+    //max-width: 1400px;
     opacity: 0%;
     h1{
         color: white;
@@ -17,7 +17,7 @@
     left: 0;
     height: 510px;
     width: 100%;
-    max-width: 1400px;
+    //max-width: 1400px;
     background-color: black;
 }
 .intro_img{
@@ -26,6 +26,6 @@
     left: 0;
     position: absolute;
     height: 510px;
-    max-width: 1440px;
+    //max-width: 1440px;
     width: 100%;
 }
